// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/Shapes/ShapePickerPopover default 1`] = `
<div
  className="euiPopover euiPopover--anchorDownCenter"
>
  <div
    className="euiPopover__anchor"
  >
    <div
      className="euiPanel euiPanel--plain euiPanel--paddingSmall css-6zsgh2-euiPanel-grow-m-s-plain"
    >
      <button
        className="euiLink css-102pf9n-euiLink-primary"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasShapePreview"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/Shapes/ShapePickerPopover interactive 1`] = `
<div
  className="euiPopover euiPopover--anchorDownCenter"
>
  <div
    className="euiPopover__anchor"
  >
    <div
      className="euiPanel euiPanel--plain euiPanel--paddingSmall css-6zsgh2-euiPanel-grow-m-s-plain"
    >
      <button
        className="euiLink css-102pf9n-euiLink-primary"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasShapePreview"
        >
          <svg
            fill="none"
            stroke="black"
            viewBox="-2.5 -2.5 105 105"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="100"
              width="100"
              x="0"
              y="0"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/Shapes/ShapePickerPopover shape selected 1`] = `
<div
  className="euiPopover euiPopover--anchorDownCenter"
>
  <div
    className="euiPopover__anchor"
  >
    <div
      className="euiPanel euiPanel--plain euiPanel--paddingSmall css-6zsgh2-euiPanel-grow-m-s-plain"
    >
      <button
        className="euiLink css-102pf9n-euiLink-primary"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasShapePreview"
        >
          <svg
            fill="none"
            stroke="black"
            viewBox="-2.5 -2.5 105 105"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="100"
              width="100"
              x="0"
              y="0"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;
